Fix i18n replacements not being displayed

--- a/locales/en.json
+++ b/locales/en.json
@@ -6,11 +6,11 @@
   "not_paused": "❌ | <b>Not paused.</>",
   "skipped": "⏩ | <b>Skipped.</>",
   "stopped": "⏹ | <b>Stopped.</>",
-  "streaming_queuing": "🎶 | <b>Streaming and queuing {item} items...</>",
-  "queuing": "🎶 | <b>Queuing {item} items...</>",
+  "streaming_queuing": "🎶 | <b>Streaming and queuing {{item}} items...</>",
+  "queuing": "🎶 | <b>Queuing {{item}} items...</>",
   "no_input": "❔ | <b>What do you want to stream?</>",
   "streaming": "▶️ | <b>Streaming...</>",
-  "queued_at": "#️⃣ | <b>Queued at position {position}.</>",
+  "queued_at": "#️⃣ | <b>Queued at position {{position}}.</>",
   "no_call": "❌ | <b>There's no active call.</>",
   "no_video_found": "❌ | <b>No video found.</>"
 }
