--- a/locales/ckb.json
+++ b/locales/ckb.json
@@ -6,11 +6,11 @@
   "not_paused": "❌ | <b>هیچ نەوەستێنراوە.</>",
   "skipped": "⏩ | <b>پەڕێنرا.</>",
   "stopped": "⏹ | <b>ڕاگیرا.</>",
-  "streaming_queuing": "🎶 | <b>{item} پەخشدەکرێن و دەخرێنە سەرەوە...</>",
-  "queuing": "🎶 | <b>{item} دەخرێنە سەرەوە...</>",
+  "streaming_queuing": "🎶 | <b>{{item}} پەخشدەکرێن و دەخرێنە سەرەوە...</>",
+  "queuing": "🎶 | <b>{{item}} دەخرێنە سەرەوە...</>",
   "no_input": "❔ | <b>دەتەوێت چی لێبدەیت؟</>",
   "streaming": "▶️ | <b>لێدەدرێت...</>",
-  "queued_at": "#️⃣ | <b>خرایە سەرەوە: {position}.</>",
+  "queued_at": "#️⃣ | <b>خرایە سەرەوە: {{position}}.</>",
   "no_call": "❌ | <b>هیچ پەیوەندییەک لێرە نییە.</>",
   "no_video_found": "❌ | <b>هیچ ڤیدیۆیەک نەدۆزرایەوە.</>"
 }
