--- a/locales/ckb.json
+++ b/locales/ckb.json
@@ -12,5 +12,6 @@
   "streaming": "▶️ | <b>لێدەدرێت...</>",
   "queued_at": "#️⃣ | <b>خرایە سەرەوە: {{position}}.</>",
   "no_call": "❌ | <b>هیچ پەیوەندییەک لێرە نییە.</>",
-  "no_video_found": "❌ | <b>هیچ ڤیدیۆیەک نەدۆزرایەوە.</>"
+  "no_video_found": "❌ | <b>هیچ ڤیدیۆیەک نەدۆزرایەوە.</>",
+  "ns": "🎵 لە ئێستادا <b>{{title}}</> لەلایەن <b>{{requester}}</> لێدەدرێت..."
 }
