--- a/locales/en.json
+++ b/locales/en.json
@@ -12,5 +12,6 @@
   "streaming": "▶️ | <b>Streaming...</>",
   "queued_at": "#️⃣ | <b>Queued at position {{position}}.</>",
   "no_call": "❌ | <b>There's no active call.</>",
-  "no_video_found": "❌ | <b>No video found.</>"
+  "no_video_found": "❌ | <b>No video found.</>",
+  "ns": "🎵 Currently streaming <b>{{title}}</> by <b>{{requester}}</>..."
 }
