--- a/locales/ckb.json
+++ b/locales/ckb.json
@@ -13,5 +13,5 @@
   "queued_at": "#️⃣ | <b>خرایە سەرەوە: {{position}}.</>",
   "no_call": "❌ | <b>هیچ پەیوەندییەک لێرە نییە.</>",
   "no_video_found": "❌ | <b>هیچ ڤیدیۆیەک نەدۆزرایەوە.</>",
-  "ns": "🎵 لە ئێستادا <b>{{title}}</> لەلایەن <b>{{requester}}</> لێدەدرێت..."
+  "ns": "🎵 لە ئێستادا <b>{{{title}}}</> لەلایەن <b>{{{requester}}}</> لێدەدرێت..."
 }
