Add authors to translation files

--- a/locales/ckb.json
+++ b/locales/ckb.json
@@ -1,4 +1,5 @@
 {
+    "authors": ["rojserbest"],
     "paused": "⏸ | <b>وەستێنرا.</>",
     "not_streaming": "❌ | <b>هیچ شتێک لێنادرێت.</>",
     "not_in_call": "❌ | <b>لە ناو پەیوەندیدا نیم.</>",
