--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,5 @@
 {
+    "authors": ["rojserbest"],
     "paused": "⏸ | <b>Paused.</>",
     "not_streaming": "❌ | <b>Not streaming.</>",
     "not_in_call": "❌ | <b>Not in call.</>",
