--- a/locales/fa.json
+++ b/locales/fa.json
@@ -1,4 +1,5 @@
 {
+    "authors": ["mlAbolfazl"],
     "paused": "⏸ | <b>مکث کردم.</>",
     "not_streaming": "❌ | <b>در حال استریم نیستم.</>",
     "not_in_call": "❌ | <b>در ویس چت نیستم.</>",
