--- a/locales/ml.json
+++ b/locales/ml.json
@@ -1,4 +1,5 @@
 {
+    "authors": ["SpEcHiDe"],  
     "paused": "⏸ | <b>താൽക്കാലികമായി നിർത്തി.</>",
     "not_streaming": "❌ | <b>സ്ട്രീമിംഗ് അല്ല.</>",
     "not_in_call": "❌ | <b>കോളിലല്ല.</>",
