--- a/locales/pt_BR.json
+++ b/locales/pt_BR.json
@@ -1,4 +1,5 @@
 {
+    "authors": ["TioDexty"],
     "paused": "⏸ | <b> Pausado. </>",
     "not_streaming": "❌ | <b>Sem streaming.</>",
     "not_in_call": "❌ | <b>Não está em chamada.</>",
