--- a/locales/si.json
+++ b/locales/si.json
@@ -1,4 +1,5 @@
 {
+    "authors": ["teletipsalltestings"],
     "paused": "⏸ | <b>මදකට නතර කරනු ලැබුවා</>",
     "not_streaming": "❌ | <b>කිසිවක් play වන්නේ නැත</>",
     "not_in_call": "❌ | <b>බොට් කථන සංවාදයට එකතු වී නැත</>",
