--- a/locales/tr.json
+++ b/locales/tr.json
@@ -1,4 +1,5 @@
 {
+    "authors": ["dikeckaan"],
     "paused": "⏸ | <b>Duraklatıldı.</>",
     "not_streaming": "❌ | <b>Akış yapılmıyor/>",
     "not_in_call": "❌ | <b>Çağrıda değil.</>",
