--- a/locales/ckb.json
+++ b/locales/ckb.json
@@ -7,8 +7,8 @@
     "not_paused": "❌ | <b>هیچ نەوەستێنراوە.</>",
     "skipped": "⏩ | <b>پەڕێنرا.</>",
     "stopped": "⏹ | <b>ڕاگیرا.</>",
-    "streaming_queuing": "🎶 | <b>{{item}} پەخشدەکرێن و دەخرێنە سەرەوە...</>",
-    "queuing": "🎶 | <b>{{item}} دەخرێنە سەرەوە...</>",
+    "streaming_queuing": "🎶 | <b>{{X}} پەخشدەکرێن و دەخرێنە سەرەوە...</>",
+    "queuing": "🎶 | <b>{{X}} دەخرێنە سەرەوە...</>",
     "no_input": "❔ | <b>دەتەوێت چی لێبدەیت؟</>",
     "streaming": "▶️ | <b>لێدەدرێت...</>",
     "queued_at": "#️⃣ | <b>خرایە سەرەوە: {{position}}.</>",
