--- a/locales/tr.json
+++ b/locales/tr.json
@@ -7,8 +7,8 @@
     "not_paused": "❌ | <b>Durdurulmadı.</>",
     "skipped": "⏩ | <b>Geçildi.</>",
     "stopped": "⏹ | <b>Durduruldu.</>",
-    "streaming_queuing": "🎶 | <b>Oynatılan and sırada ki parça {{item}} items...</>",
-    "queuing": "🎶 | <b>Sıradaki {{item}} items...</>",
+    "streaming_queuing": "🎶 | <b>Oynatılan and sırada ki parça {{X}} items...</>",
+    "queuing": "🎶 | <b>Sıradaki {{X}} items...</>",
     "no_input": "❔ | <b>Ne oynatmak istersin?</>",
     "streaming": "▶️ | <b>Oynatılıyor...</>",
     "queued_at": "#️⃣ | <b>Kuyrukta şu sırada {{position}}.</>",
