--- a/locales/en.json
+++ b/locales/en.json
@@ -7,8 +7,8 @@
     "not_paused": "❌ | <b>Not paused.</>",
     "skipped": "⏩ | <b>Skipped.</>",
     "stopped": "⏹ | <b>Stopped.</>",
-    "streaming_queuing": "🎶 | <b>Streaming and queuing {{item}} items...</>",
-    "queuing": "🎶 | <b>Queuing {{item}} items...</>",
+    "streaming_queuing": "🎶 | <b>Streaming and queuing {{X}} items...</>",
+    "queuing": "🎶 | <b>Queuing {{X}} items...</>",
     "no_input": "❔ | <b>What do you want to stream?</>",
     "streaming": "▶️ | <b>Streaming...</>",
     "queued_at": "#️⃣ | <b>Queued at position {{position}}.</>",
