--- a/locales/fa.json
+++ b/locales/fa.json
@@ -7,8 +7,8 @@
     "not_paused": "❌ | <b>مکث نشده بود.</>",
     "skipped": "⏩ | <b>رد شد.</>",
     "stopped": "⏹ | <b>متوقف شد.</>",
-    "streaming_queuing": "🎶 | <b>در حال استریم و صف بندی {{item}} مورد...</>",
-    "queuing": "🎶 | <b>صف بندی {{item}} مورد...</>",
+    "streaming_queuing": "🎶 | <b>در حال استریم و صف بندی {{X}} مورد...</>",
+    "queuing": "🎶 | <b>صف بندی {{X}} مورد...</>",
     "no_input": "❔ | <b>می‌خواهید چی چیزی را استریم کنید؟</>",
     "streaming": "▶️ | <b>در حال استریم...</>",
     "queued_at": "#️⃣ | <b>در موقعیت {{position}} از صف قرار گرفت.</>",
