--- a/locales/ml.json
+++ b/locales/ml.json
@@ -1,5 +1,5 @@
 {
-    "authors": ["SpEcHiDe"],  
+    "authors": ["SpEcHiDe"],
     "paused": "⏸ | <b>താൽക്കാലികമായി നിർത്തി.</>",
     "not_streaming": "❌ | <b>സ്ട്രീമിംഗ് അല്ല.</>",
     "not_in_call": "❌ | <b>കോളിലല്ല.</>",
@@ -7,8 +7,8 @@
     "not_paused": "❌ | <b>താൽക്കാലികമായി നിർത്തിയിട്ടില്ല.</>",
     "skipped": "⏩ | <b>ഒഴിവാക്കി.</>",
     "stopped": "⏹ | <b>നിർത്തി.</>",
-    "streaming_queuing": "🎶 | <b>സ്ട്രീം ചെയ്യുകയും {{item}} ഇനങ്ങൾ ക്യൂ ചെയ്യുകയും ചെയ്യുന്നു...</>",
-    "queuing": "🎶 | <b>{{item}} ഇനം ക്യൂ ചെയ്യുന്നു...</>",
+    "streaming_queuing": "🎶 | <b>സ്ട്രീം ചെയ്യുകയും {{X}} ഇനങ്ങൾ ക്യൂ ചെയ്യുകയും ചെയ്യുന്നു...</>",
+    "queuing": "🎶 | <b>{{X}} ഇനം ക്യൂ ചെയ്യുന്നു...</>",
     "no_input": "❔ | <b>നിങ്ങൾ എന്താണ് സ്ട്രീം ചെയ്യാൻ ആഗ്രഹിക്കുന്നത്?</>",
     "streaming": "▶️ | <b>സ്ട്രീമിംഗ്...</>",
     "queued_at": "#️⃣ | <b>സ്ഥാനം {{position}} ൽ ക്യൂ.</>",
