--- a/locales/pt_BR.json
+++ b/locales/pt_BR.json
@@ -7,8 +7,8 @@
     "not_paused": "❌ | <b> Não pausado. </>",
     "skipped": "⏩ | <b> Ignorado. </>",
     "stopped": "⏹ | <b> Parado. </>",
-    "streaming_queuing": "🎶 | <b> Streaming e fila {{item}} itens ... </>",
-    "queuing": "🎶 | <b> Fila {{item}} itens ... </>",
+    "streaming_queuing": "🎶 | <b> Streaming e fila {{X}} itens ... </>",
+    "queuing": "🎶 | <b> Fila {{X}} itens ... </>",
     "no_input": "❔ | <b> O que você deseja transmitir?</>",
     "streaming": "▶️ | <b> Streaming ... </>",
     "queued_at": "#️⃣ | <b> Na fila na posição {{position}}.</>",
