--- a/locales/si.json
+++ b/locales/si.json
@@ -7,8 +7,8 @@
     "not_paused": "❌ | <b>මදකට නතර කර නැත</>",
     "skipped": "⏩ | <b>ඊළග සින්දුවට යන ලදි</>",
     "stopped": "⏹ | <b>නැවැත්වුවා</>",
-    "streaming_queuing": "🎶 | <b>ඉල්ලුම් ලැයිස්තුවට අනුව {{item}} play වෙනවා</>",
-    "queuing": "🎶 | <b> {{item}} ඉල්ලුම් ලැයිස්තුවට එකතු කළා</>",
+    "streaming_queuing": "🎶 | <b>ඉල්ලුම් ලැයිස්තුවට අනුව {{X}} play වෙනවා</>",
+    "queuing": "🎶 | <b> {{X}} ඉල්ලුම් ලැයිස්තුවට එකතු කළා</>",
     "no_input": "❔ | <b>ඔයාට මොකක්ද play කරන්න අවශ්‍ය?</>",
     "streaming": "▶️ | <b>play වෙනවා</>",
     "queued_at": "#️⃣ | <b>ඔබේ ඉල්ලීම ඉල්ලුම් ලැයිස්තුවේ {{position}} වන ස්ථානයේ පවතී</>",
