Reply file too big

--- a/locales/ckb.json
+++ b/locales/ckb.json
@@ -15,5 +15,6 @@
     "no_call": "❌ | <b>هیچ پەیوەندییەک لێرە نییە.</>",
     "no_video_found": "❌ | <b>هیچ ڤیدیۆیەک نەدۆزرایەوە.</>",
     "ns": "🎵 | لە ئێستادا <b>{{{title}}}</> لەلایەن <b>{{{requester}}}</> لێدەدرێت...",
-    "error": "❌ | <b>هەڵەیەک ڕوویدا.</>"
+    "error": "❌ | <b>هەڵەیەک ڕوویدا.</>",
+    "file_too_big": "❌ | <b>ئەم فایلە زۆر گەورەیە.</>"
 }
