Show error with message if possible

--- a/locales/ckb.json
+++ b/locales/ckb.json
@@ -16,5 +16,6 @@
     "no_video_found": "❌ | <b>هیچ ڤیدیۆیەک نەدۆزرایەوە.</>",
     "ns": "🎵 | لە ئێستادا <b>{{{title}}}</> لەلایەن <b>{{{requester}}}</> لێدەدرێت...",
     "error": "❌ | <b>هەڵەیەک ڕوویدا.</>",
-    "file_too_big": "❌ | <b>ئەم فایلە زۆر گەورەیە.</>"
+    "file_too_big": "❌ | <b>ئەم فایلە زۆر گەورەیە.</>",
+    "error_with_message": "❌ | <b>هەڵەیەک ڕوویدا:</> {{message}}"
 }
