--- a/locales/bn.json
+++ b/locales/bn.json
@@ -16,5 +16,6 @@
     "no_video_found": "❌ | <b>কোন ভিডিও পাওয়া যায়নি।</>",
     "ns": "🎵 | <b>{{{requester}}}</>'র অনুরোধে বর্তমানে স্ট্রিম করা হচ্ছে <b>{{{title}}}।</>...",
     "error": "❌ | <b>কোনো একটি ত্রুটি ঘটেছে।</>",
-    "file_too_big": "❌ | <b>এই ফাইলটি অনেক বড়।</>"
+    "file_too_big": "❌ | <b>এই ফাইলটি অনেক বড়।</>",
+    "error_with_message": "❌ | <b>একটি ত্রুটি ঘটেছে:</> {{message}}"
 }
