Add volume command

--- a/locales/ckb.json
+++ b/locales/ckb.json
@@ -17,5 +17,7 @@
     "ns": "🎵 | لە ئێستادا <b>{{{title}}}</> لەلایەن <b>{{{requester}}}</> لێدەدرێت...",
     "error": "❌ | <b>هەڵەیەک ڕوویدا.</>",
     "file_too_big": "❌ | <b>ئەم فایلە زۆر گەورەیە.</>",
-    "error_with_message": "❌ | <b>هەڵەیەک ڕوویدا:</> {{message}}"
+    "error_with_message": "❌ | <b>هەڵەیەک ڕوویدا:</> {{message}}",
+    "invalid_volume": "❌ | <b>ژمارەیەکم پێبدە لە نێوان 0 و 200.</>",
+    "volume_set": "🔈 | <b>دەنگ کرا بە {{amount}}.</>"
 }
