--- a/locales/en.json
+++ b/locales/en.json
@@ -17,5 +17,7 @@
     "ns": "🎵 | Currently streaming <b>{{{title}}}</> by <b>{{{requester}}}</>...",
     "error": "❌ | <b>An error occurred.</>",
     "file_too_big": "❌ | <b>This file is too big.</>",
-    "error_with_message": "❌ | <b>An error occurred:</> {{message}}"
+    "error_with_message": "❌ | <b>An error occurred:</> {{message}}",
+    "invalid_volume": "❌ | <b>Pass a number between 0 and 200.</>",
+    "volume_set": "🔈 | <b>Volume set to {{amount}}.</>"
 }
