--- a/locales/id.json
+++ b/locales/id.json
@@ -1,19 +1,23 @@
 {
     "authors": ["breakdowns"],
     "paused": "⏸ | <b>Dijeda.</>",
-    "not_streaming": "❌ | <b>Tidak streaming.</>",
+    "not_streaming": "❌ | <b>Tidak sedang memutar lagu.</>",
     "not_in_call": "❌ | <b>Tidak dalam panggilan.</>",
     "resumed": "▶️ | <b>Dilanjutkan.</>",
     "not_paused": "❌ | <b>Tidak dijeda.</>",
     "skipped": "⏩ | <b>Dilewati.</>",
     "stopped": "⏹ | <b>Berhenti.</>",
-    "streaming_queuing": "🎶 | <b>Streaming dan antrian {{X}} item...</>",
+    "streaming_queuing": "🎶 | <b>Memutar dan dimasukkan kedalam antrian {{X}}...</>",
     "queuing": "🎶 | <b>Mengantri {{X}} item...</>",
-    "no_input": "❔ | <b>Streaming apa yang Anda inginkan?</>",
-    "streaming": "▶️ | <b>Streaming...</>",
+    "no_input": "❔ | <b>Putar lagu apa yang Anda inginkan?</>",
+    "streaming": "▶️ | <b>Memutar...</>",
     "queued_at": "#️⃣ | <b>Antri di posisi {{position}}.</>",
     "no_call": "❌ | <b>Tidak ada panggilan aktif.</>",
     "no_video_found": "❌ | <b>Tidak ada video yang ditemukan.</>",
-    "ns": "🎵 | Sedang streaming <b>{{{title}}}</> oleh <b>{{{requester}}}</>...",
-    "error": "❌ | <b>Terjadi kesalahan.</>"
+    "ns": "🎵 | Sedang memutar <b>{{{title}}}</> oleh <b>{{{requester}}}</>...",
+    "error": "❌ | <b>Terjadi kesalahan.</>",
+    "file_too_big": "❌ | <b>Ukuran file terlalu besar.</>",
+    "error_with_message": "❌ | <b>Sebuah kesalahan terjadi:</> {{message}}",
+    "invalid_volume": "❌ | <b>Masukkan angka 1-200.</>",
+    "volume_set": "🔈 | <b>Volume diatur ke {{amount}}.</>"
 }
