--- a/locales/ckb.json
+++ b/locales/ckb.json
@@ -19,5 +19,6 @@
     "file_too_big": "❌ | <b>ئەم فایلە زۆر گەورەیە.</>",
     "error_with_message": "❌ | <b>هەڵەیەک ڕوویدا:</> {{message}}",
     "invalid_volume": "❌ | <b>ژمارەیەکم پێبدە لە نێوان 0 و 200.</>",
-    "volume_set": "🔈 | <b>دەنگ کرا بە {{amount}}.</>"
+    "volume_set": "🔈 | <b>دەنگ کرا بە {{amount}}.</>",
+    "custom_input": "فایلی پێدراو"
 }
