Update German translation

--- a/locales/de.json
+++ b/locales/de.json
@@ -19,5 +19,6 @@
     "file_too_big": "❌ | <b>Die Datei ist zu groß.</>",
     "error_with_message": "❌ | <b>Ein Fehler ist aufgetreten:</> {{message}}",
     "invalid_volume": "❌ | <b>Gebe eine Nummer zwischen 0 und 200 an.</>",
-    "volume_set": "🔈 | <b>Lautstärke gesetzt auf {{amount}}.</>"
+    "volume_set": "🔈 | <b>Lautstärke gesetzt auf {{amount}}.</>",
+    "custom_input": "Benutzerdefinierte Eingabe"
 }
