Update `Bengali` Translations

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -17,5 +17,8 @@
     "ns": "🎵 | <b>{{{requester}}}</>'র অনুরোধে বর্তমানে স্ট্রিম করা হচ্ছে <b>{{{title}}}।</>...",
     "error": "❌ | <b>কোনো একটি ত্রুটি ঘটেছে।</>",
     "file_too_big": "❌ | <b>এই ফাইলটি অনেক বড়।</>",
-    "error_with_message": "❌ | <b>একটি ত্রুটি ঘটেছে:</> {{message}}"
+    "error_with_message": "❌ | <b>একটি ত্রুটি ঘটেছে:</> {{message}}",
+    "invalid_volume": "❌ | <b>০ থেকে ২০০ এর মধ্যে একটি সংখ্যা দিন।</>",
+    "volume_set": "🔈 | <b>{{amount}} তে ভলিউম সেট করা হয়েছে।</>",
+    "custom_input": "কাস্টম ইনপুট"
 }
