--- a/locales/es.json
+++ b/locales/es.json
@@ -7,13 +7,18 @@
     "not_paused": "❌ | <b>No está pausado.</>",
     "skipped": "⏩ | <b>Saltado.</>",
     "stopped": "⏹ | <b>Detenido.</>",
-    "streaming_queuing": "🎶 | <b>Transmitiendo y agregando {{item}} elementos a la lista...</>",
-    "queuing": "🎶 | <b>Agregando {{item}} elementos...</>",
+    "streaming_queuing": "🎶 | <b>Transmitiendo y agregando {{X}} elementos a la lista...</>",
+    "queuing": "🎶 | <b>Agregando {{X}} elementos...</>",
     "no_input": "❔ | <b>¿Qué quieres transmitir?</>",
     "streaming": "▶️ | <b>Transmitiendo...</>",
     "queued_at": "#️⃣ | <b>Agregado a la lista en posición {{position}}.</>",
     "no_call": "❌ | <b>No hay llamada activa.</>",
     "no_video_found": "❌ | <b>No se encontró el video.</>",
     "ns": "🎵 | Actualmente transmitiendo <b>{{{title}}}</> de <b>{{{requester}}}</>...",
-    "error": "❌ | <b>Ocurrió un error.</>"
+    "error": "❌ | <b>Ocurrió un error.</>",
+    "file_too_big": "❌ | <b>Este archivo es muy grande.</>",
+    "error_with_message": "❌ | <b>Ocurrió un error:</> {{message}}",
+    "invalid_volume": "❌ | <b>Debes enviar un número entre 0 y 200.</>",
+    "volume_set": "🔈 | <b>Volumen configurado a {{amount}}.</>",
+    "custom_input": "Entrada personalizada"
 }
