Readd mute and unmute commands

--- a/locales/ckb.json
+++ b/locales/ckb.json
@@ -20,5 +20,9 @@
     "error_with_message": "❌ | <b>هەڵەیەک ڕوویدا:</> {{message}}",
     "invalid_volume": "❌ | <b>ژمارەیەکم پێبدە لە نێوان 0 و 200.</>",
     "volume_set": "🔈 | <b>دەنگ کرا بە {{amount}}.</>",
-    "custom_input": "فایلی پێدراو"
+    "custom_input": "فایلی پێدراو",
+    "muted": "🔇 | <b>بێدەنگکرا.</>",
+    "unmute": "🔈 | <b>بەدەنگکرا.</>",
+    "already_muted": "❌ | <b>بەدەنگ نییە.</>",
+    "not_muted": "❌ | <b>بێدەنگ نەکراوە.</>"
 }
