Fix unmuted strings

--- a/locales/ckb.json
+++ b/locales/ckb.json
@@ -22,7 +22,7 @@
     "volume_set": "🔈 | <b>دەنگ کرا بە {{amount}}.</>",
     "custom_input": "فایلی پێدراو",
     "muted": "🔇 | <b>بێدەنگکرا.</>",
-    "unmute": "🔈 | <b>بەدەنگکرا.</>",
+    "unmuted": "🔈 | <b>بەدەنگکرا.</>",
     "already_muted": "❌ | <b>بەدەنگ نییە.</>",
     "not_muted": "❌ | <b>بێدەنگ نەکراوە.</>"
 }
