Add shuffle command

--- a/locales/ckb.json
+++ b/locales/ckb.json
@@ -24,5 +24,7 @@
     "muted": "🔇 | <b>بێدەنگکرا.</>",
     "unmuted": "🔈 | <b>بەدەنگکرا.</>",
     "already_muted": "❌ | <b>بەدەنگ نییە.</>",
-    "not_muted": "❌ | <b>بێدەنگ نەکراوە.</>"
+    "not_muted": "❌ | <b>بێدەنگ نەکراوە.</>",
+    "shuffling": "🔀 | <b>تێکدەدرێت...</>",
+    "no_enough_items": "❌ | <b>ناتوانرێت سەرەکە تێکبدرێت.</>"
 }
