Improve now strings

--- a/locales/ckb.json
+++ b/locales/ckb.json
@@ -14,7 +14,7 @@
     "queued_at": "#️⃣ | <b>خرایە سەرەوە: {{position}}.</>",
     "no_call": "❌ | <b>هیچ پەیوەندییەک لێرە نییە.</>",
     "no_video_found": "❌ | <b>هیچ ڤیدیۆیەک نەدۆزرایەوە.</>",
-    "ns": "🎵 | لە ئێستادا <b>{{{title}}}</> لەلایەن <b>{{{requester}}}</> لێدەدرێت...",
+    "ns": "🎵 | لە ئێستادا <b><a href=\"{{titleUrl}}\">{{title}}</></> لەلایەن <b><a href=\"{{requesterUrl}}\">{{requester}}</></> لێدەدرێت...",
     "error": "❌ | <b>هەڵەیەک ڕوویدا.</>",
     "file_too_big": "❌ | <b>ئەم فایلە زۆر گەورەیە.</>",
     "error_with_message": "❌ | <b>هەڵەیەک ڕوویدا:</> {{message}}",
