--- a/locales/fa.json
+++ b/locales/fa.json
@@ -14,5 +14,5 @@
     "queued_at": "#️⃣ | <b>در موقعیت {{position}} از صف قرار گرفت.</>",
     "no_call": "❌ | <b>ویس چت فعال نیست.</>",
     "no_video_found": "❌ | <b>هیچ ویدئویی یافت نشد.</>",
-    "ns": "🎵 | هم اکنون در حال استریم <b>{{{title}}}</> توسط <b>{{{requester}}}</>..."
+    "ns": "🎵 | هم اکنون در حال استریم <b><a href=\"{{titleUrl}}\">{{title}}</></> توسط <b><a href=\"{{requesterUrl}}\">{{requester}}</></>..."
 }
