--- a/locales/ml.json
+++ b/locales/ml.json
@@ -14,6 +14,6 @@
     "queued_at": "#️⃣ | <b>{{position}} സ്ഥാനം ൽ ക്യൂ.</>",
     "no_call": "❌ | <b>സജീവ കോൾ ഇല്ല.</>",
     "no_video_found": "❌ | <b>വീഡിയോ കണ്ടെത്തിയില്ല.</>",
-    "ns": "🎵 | <b>{{{requester}}}</> അഭ്യർത്ഥിച്ച <b>{{{title}}}</> നിലവിൽ സ്ട്രീം ചെയ്യുന്നു ",
+    "ns": "🎵 | <b><a href=\"{{requesterUrl}}\">{{requester}}</></> അഭ്യർത്ഥിച്ച <b><a href=\"{{titleUrl}}\">{{title}}</></> നിലവിൽ സ്ട്രീം ചെയ്യുന്നു ",
     "error": "❌ | <b>ഒരു പിശക് സംഭവിച്ചു.</>"
 }
