--- a/locales/bn.json
+++ b/locales/bn.json
@@ -14,7 +14,7 @@
     "queued_at": "#️⃣ | <b>{{position}} নং অবস্থানে সারিবদ্ধ।</>",
     "no_call": "❌ | <b>কোনো কল সক্রিয় নেই।</>",
     "no_video_found": "❌ | <b>কোন ভিডিও পাওয়া যায়নি।</>",
-    "ns": "🎵 | <b>{{{requester}}}</>'র অনুরোধে বর্তমানে স্ট্রিম করা হচ্ছে <b>{{{title}}}।</>...",
+    "ns": "🎵 | <b><a href=\"{{requesterUrl}}\">{{requester}}</></>'র অনুরোধে বর্তমানে স্ট্রিম করা হচ্ছে <b>{{{title}}}।</>...",
     "error": "❌ | <b>কোনো একটি ত্রুটি ঘটেছে।</>",
     "file_too_big": "❌ | <b>এই ফাইলটি অনেক বড়।</>",
     "error_with_message": "❌ | <b>একটি ত্রুটি ঘটেছে:</> {{message}}",
