--- a/locales/en.json
+++ b/locales/en.json
@@ -14,7 +14,7 @@
     "queued_at": "#️⃣ | <b>Queued at position {{position}}.</>",
     "no_call": "❌ | <b>There's no active call.</>",
     "no_video_found": "❌ | <b>No video found.</>",
-    "ns": "🎵 | Currently streaming <b>{{{title}}}</> by <b>{{{requester}}}</>...",
+    "ns": "🎵 | Currently streaming <b><a href=\"{{titleUrl}}\">{{title}}</></> by <b><a href=\"{{requesterUrl}}\">{{requester}}</></>...",
     "error": "❌ | <b>An error occurred.</>",
     "file_too_big": "❌ | <b>This file is too big.</>",
     "error_with_message": "❌ | <b>An error occurred:</> {{message}}",
