--- a/locales/tr.json
+++ b/locales/tr.json
@@ -14,6 +14,6 @@
     "queued_at": "#️⃣ | <b>Kuyrukta ki sırası {{position}}.</>",
     "no_call": "❌ | <b>Aktif bir sesli çağrı yok.</>",
     "no_video_found": "❌ | <b>Video bulunamadı.</>",
-    "ns": "🎵 | Şuanda oynatılan <b>{{{title}}}</> <b>{{{requester}}} trafından çalınıyor.</>...",
+    "ns": "🎵 | Şuanda oynatılan <b><a href=\"{{titleUrl}}\">{{title}}</></> <b>{{{requester}}} trafından çalınıyor.</>...",
     "error": "❌ | <b>Bir hata meydana geldi.</>"
 }
