--- a/locales/en.json
+++ b/locales/en.json
@@ -1,12 +1,19 @@
 {
     "authors": ["rojserbest"],
     "paused": "⏸ | <b>Paused.</>",
+    "panel_paused": "Paused.",
     "not_streaming": "❌ | <b>Not streaming.</>",
+    "panel_not_streaming": "Not streaming.",
     "not_in_call": "❌ | <b>Not in call.</>",
+    "panel_not_in_call": "Not in call.",
     "resumed": "▶️ | <b>Resumed.</>",
+    "panel_resumed": "Resumed.",
     "not_paused": "❌ | <b>Not paused.</>",
+    "panel_not_paused": "Not paused.",
     "skipped": "⏩ | <b>Skipped.</>",
+    "panel_skipped": "Skipped.",
     "stopped": "⏹ | <b>Stopped.</>",
+    "panel_stopped": "Stopped.",
     "streaming_queuing": "🎶 | <b>Streaming and queuing {{X}} items...</>",
     "queuing": "🎶 | <b>Queuing {{X}} items...</>",
     "no_input": "❔ | <b>What do you want to stream?</>",
@@ -20,11 +27,21 @@
     "error_with_message": "❌ | <b>An error occurred:</> {{message}}",
     "invalid_volume": "❌ | <b>Pass a number between 0 and 200.</>",
     "volume_set": "🔈 | <b>Volume set to {{amount}}.</>",
+    "panel_volume_set": "Volume set to {{amount}}.",
     "custom_input": "Custom Input",
     "muted": "🔇 | <b>Muted.</>",
+    "panel_muted": "Muted.",
     "unmuted": "🔈 | <b>Unmuted.</>",
+    "panel_unmuted": "Unmuted.",
     "already_muted": "❌ | <b>Already muted.</>",
+    "panel_already_muted": "Already muted.",
     "not_muted": "❌ | <b>Not muted.</>",
+    "panel_not_muted": "Not muted.",
     "shuffling": "🔀 | <b>Shuffling...</>",
-    "no_enough_items": "❌ | <b>No enough items to shuffle.</>"
+    "panel_shuffling": "Shuffling...",
+    "no_enough_items": "❌ | <b>No enough items to shuffle.</>",
+    "panel_no_enough_items": "No enough items to shuffle.",
+    "panel": "🎵 | Streaming now: <b><a href=\"{{nowUrl}}\">{{now}}</></>\n➡️ | Streaming next: <b><a href=\"{{nextUrl}}\">{{next}}</></>",
+    "nothing_now": "Nothing streaming now",
+    "nothing_next": "Nothing streaming next"
 }
