--- a/locales/en.json
+++ b/locales/en.json
@@ -43,5 +43,6 @@
     "panel_no_enough_items": "No enough items to shuffle.",
     "panel": "🎵 | <b><a href=\"{{nowUrl}}\">{{now}}</></>\n➡️ | <b><a href=\"{{nextUrl}}\">{{next}}</></>",
     "nothing_now": "Nothing streaming now",
-    "nothing_next": "Nothing streaming next"
+    "nothing_next": "Nothing streaming next",
+    "panel_updated": "Updated."
 }
