--- a/locales/en.json
+++ b/locales/en.json
@@ -26,8 +26,8 @@
     "file_too_big": "❌ | <b>This file is too big.</>",
     "error_with_message": "❌ | <b>An error occurred:</> {{message}}",
     "invalid_volume": "❌ | <b>Pass a number between 0 and 200.</>",
-    "volume_set": "🔈 | <b>Volume set to {{amount}}.</>",
-    "panel_volume_set": "Volume set to {{amount}}.",
+    "volume_set": "🔈 | <b>Volume set to {{amount}}%.</>",
+    "panel_volume_set": "Volume set to {{amount}}%.",
     "custom_input": "Custom Input",
     "muted": "🔇 | <b>Muted.</>",
     "panel_muted": "Muted.",
