--- a/locales/ckb.json
+++ b/locales/ckb.json
@@ -1,30 +1,48 @@
 {
     "authors": ["rojserbest"],
-    "paused": "⏸ | <b>وەستێنرا.</>",
-    "not_streaming": "❌ | <b>هیچ شتێک لێنادرێت.</>",
-    "not_in_call": "❌ | <b>لە ناو پەیوەندیدا نیم.</>",
+    "paused": "⏸ | <b>ڕاگیرا.</>",
+    "panel_paused": "ڕاگیرا.",
+    "not_streaming": "❌ | <b>هیچ لێنادرێت.</>",
+    "panel_not_streaming": "هیچ لێنادرێت.",
+    "not_in_call": "❌ | <b>لە چاتی دەنگیدا نیم.</>",
+    "panel_not_in_call": "لە چاتی دەنگیدا نیم.",
     "resumed": "▶️ | <b>بەردەوامکرا.</>",
-    "not_paused": "❌ | <b>هیچ نەوەستێنراوە.</>",
+    "panel_resumed": "بەردەوامکرا.",
+    "not_paused": "❌ | <b>هیچ ڕانەگیراوە.</>",
+    "panel_not_paused": "ڕانەگیراوە.",
     "skipped": "⏩ | <b>پەڕێنرا.</>",
-    "stopped": "⏹ | <b>ڕاگیرا.</>",
-    "streaming_queuing": "🎶 | <b>{{X}} پەخشدەکرێن و دەخرێنە سەرەوە...</>",
+    "panel_skipped": "پەڕێنرا.",
+    "stopped": "⏹ | <b>وەستێنرا.</>",
+    "panel_stopped": "وەستێنرا.",
+    "streaming_queuing": "🎶 | <b>{{X}} لێدەدرێن و دەخرێنە سەرەوە...</>",
     "queuing": "🎶 | <b>{{X}} دەخرێنە سەرەوە...</>",
     "no_input": "❔ | <b>دەتەوێت چی لێبدەیت؟</>",
     "streaming": "▶️ | <b>لێدەدرێت...</>",
     "queued_at": "#️⃣ | <b>خرایە سەرەوە: {{position}}.</>",
-    "no_call": "❌ | <b>هیچ پەیوەندییەک لێرە نییە.</>",
+    "no_call": "❌ | <b>چاتی دەنگی دەستپێنەکراوە.</>",
     "no_video_found": "❌ | <b>هیچ ڤیدیۆیەک نەدۆزرایەوە.</>",
     "ns": "🎵 | لە ئێستادا <b><a href=\"{{titleUrl}}\">{{title}}</></> لەلایەن <b><a href=\"{{requesterUrl}}\">{{requester}}</></> لێدەدرێت...",
     "error": "❌ | <b>هەڵەیەک ڕوویدا.</>",
     "file_too_big": "❌ | <b>ئەم فایلە زۆر گەورەیە.</>",
     "error_with_message": "❌ | <b>هەڵەیەک ڕوویدا:</> {{message}}",
     "invalid_volume": "❌ | <b>ژمارەیەکم پێبدە لە نێوان 0 و 200.</>",
-    "volume_set": "🔈 | <b>دەنگ کرا بە {{amount}}.</>",
+    "volume_set": "🔈 | <b>ڕێژەی دەنگ کرا بە {{amount}}%.</>",
+    "panel_volume_set": "ڕێژەی دەنگ کرا بە {{amount}}%.",
     "custom_input": "فایلی پێدراو",
     "muted": "🔇 | <b>بێدەنگکرا.</>",
+    "panel_muted": "بێدەنگکرا.",
     "unmuted": "🔈 | <b>بەدەنگکرا.</>",
-    "already_muted": "❌ | <b>بەدەنگ نییە.</>",
+    "panel_unmuted": "بەدەنگکرا.",
+    "already_muted": "❌ | <b>بێدەنگ کراوە.</>",
+    "panel_already_muted": "بێدەنگ کراوە.",
     "not_muted": "❌ | <b>بێدەنگ نەکراوە.</>",
+    "panel_not_muted": "بێدەنگ نەکراوە.",
     "shuffling": "🔀 | <b>تێکدەدرێت...</>",
-    "no_enough_items": "❌ | <b>ناتوانرێت سەرەکە تێکبدرێت.</>"
+    "panel_shuffling": "تێکدەدرێت...",
+    "no_enough_items": "❌ | <b>ناتوانرێت سەرەکە تێکبدرێت.</>",
+    "panel_no_enough_items": "ناتوانرێت سەرەکە تێکبدرێت.",
+    "panel": "🎵 | <b><a href=\"{{nowUrl}}\">{{now}}</></>\n➡️ | <b><a href=\"{{nextUrl}}\">{{next}}</></>",
+    "nothing_now": "هیچ لێنادرێت",
+    "nothing_next": "هیچ دواتر لێنادرێت",
+    "panel_updated": "نوێکرایەوە."
 }
