--- a/locales/en.json
+++ b/locales/en.json
@@ -44,5 +44,13 @@
     "panel": "🎵 | <b><a href=\"{{nowUrl}}\">{{now}}</></>\n➡️ | <b><a href=\"{{nextUrl}}\">{{next}}</></>",
     "nothing_now": "Nothing streaming now",
     "nothing_next": "Nothing streaming next",
-    "panel_updated": "Updated."
+    "panel_updated": "Updated.",
+    "no_query": "❔ | <b>What do you want to search for?</>",
+    "no_results_found": "❌ | <b>No results found.</>",
+    "search_active": "❌ | <b>There is an active search.</>",
+    "search_not_active": "❌ | <b>There no search active.</>",
+    "search_header": "<b>🔍 | Search results for {{query}}...",
+    "search_footer": "<i>Reply the number of the result you want to stream or /cancel.</>",
+    "search_result": "{{numberEmoji}} {{title}}\n  ├ {{durationEmoji}} {{duration}}\n  ├ 👁 {{views}}\n  ├ 📅 {{uploadTime}}\n  └ 👤 {{uploader}}",
+    "search_canceled": "✅ | <b>Search canceled.</>"
 }
