--- a/locales/en.json
+++ b/locales/en.json
@@ -48,7 +48,7 @@
     "no_query": "❔ | <b>What do you want to search for?</>",
     "no_results_found": "❌ | <b>No results found.</>",
     "search_active": "❌ | <b>There is an active search.</>",
-    "search_not_active": "❌ | <b>There no search active.</>",
+    "search_not_active": "❌ | <b>There is no search active.</>",
     "search_header": "<b>🔍 | Search results for {{query}}...",
     "search_footer": "<i>Reply the number of the result you want to stream or /cancel.</>",
     "search_result": "{{numberEmoji}} {{title}}\n  ├ {{durationEmoji}} {{duration}}\n  ├ 👁 {{views}}\n  ├ 📅 {{uploadTime}}\n  └ 👤 {{uploader}}",
