--- a/locales/en.json
+++ b/locales/en.json
@@ -52,5 +52,8 @@
     "search_header": "<b>🔍 | Search results for {{query}}...</>",
     "search_footer": "<i>Reply the number of the result you want to stream or /cancel.</>",
     "search_result": "{{numberEmoji}} <b><a href=\"{{url}}\">{{title}}</></>\n  ├ {{durationEmoji}} {{duration}}\n  ├ 👁 {{views}}\n  ├ 📅 {{uploadTime}}\n  └ 👤 {{uploader}}",
-    "search_canceled": "✅ | <b>Search canceled.</>"
+    "search_canceled": "✅ | <b>Search canceled.</>",
+    "loop_on": "🔁 | <b>Turned loop on.</>",
+    "loop_off": "🔁 | <b>Turned loop off.</>",
+    "caches_deleted": "🗑 | <b>Caches deleted.</>"
 }
