--- a/locales/si.json
+++ b/locales/si.json
@@ -1,17 +1,17 @@
 {
     "authors": ["teletipsalltestings"],
-    "paused": "⏸ | <b>මදකට නතර කරනු ලැබුවා</>",
+    "paused": "⏸ | <b>තාවකාලිකව නතර කරනු ලැබුවා</>",
     "not_streaming": "❌ | <b>කිසිවක් play වන්නේ නැත</>",
     "not_in_call": "❌ | <b>බොට් කථන සංවාදයට එකතු වී නැත</>",
     "resumed": "▶️ | <b>නැවත ආරම්භ කරන ලදි</>",
-    "not_paused": "❌ | <b>මදකට නතර කර නැත</>",
+    "not_paused": "❌ | <b>තාවකාලිකව නතර කර නැත</>",
     "skipped": "⏩ | <b>ඊළග සින්දුවට යන ලදි</>",
     "stopped": "⏹ | <b>නැවැත්වුවා</>",
     "streaming_queuing": "🎶 | <b>ඉල්ලුම් ලැයිස්තුවට අනුව {{X}} play වෙනවා</>",
     "queuing": "🎶 | <b> {{X}} ඉල්ලුම් ලැයිස්තුවට එකතු කළා</>",
-    "no_input": "❔ | <b>ඔයාට මොකක්ද play කරන්න අවශ්‍ය?</>",
+    "no_input": "❔ | <b>ඔබට play කිරීමට අවශ්‍ය කුමක්ද?</>",
     "streaming": "▶️ | <b>play වෙනවා</>",
     "queued_at": "#️⃣ | <b>ඔබේ ඉල්ලීම ඉල්ලුම් ලැයිස්තුවේ {{position}} වන ස්ථානයේ පවතී</>",
-    "no_call": "❌ | <b>කථන සංවාදයක් ආරම්භ කර නැත</>",
-    "no_video_found": "❌ | <b>වීඩියෝව සොයා ගත නොහැක</>"
+    "no_call": "❌ | <b>කථන සංවාදයක් ආරම්භ කර නොමැත</>",
+    "no_video_found": "❌ | <b>සමාවන්න, එය සොයා ගත නොහැක</>"
 }
