--- a/locales/en.json
+++ b/locales/en.json
@@ -1,60 +1,60 @@
 {
-    "authors": ["rojserbest"],
-    "paused": "⏸ | <b>Paused.</>",
-    "panel_paused": "Paused.",
-    "not_streaming": "❌ | <b>Not streaming.</>",
-    "panel_not_streaming": "Not streaming.",
-    "not_in_call": "❌ | <b>Not in call.</>",
-    "panel_not_in_call": "Not in call.",
-    "resumed": "▶️ | <b>Resumed.</>",
-    "panel_resumed": "Resumed.",
-    "not_paused": "❌ | <b>Not paused.</>",
-    "panel_not_paused": "Not paused.",
-    "skipped": "⏩ | <b>Skipped.</>",
-    "panel_skipped": "Skipped.",
-    "stopped": "⏹ | <b>Stopped.</>",
-    "panel_stopped": "Stopped.",
-    "streaming_queuing": "🎶 | <b>Streaming and queuing {{X}} items...</>",
-    "queuing": "🎶 | <b>Queuing {{X}} items...</>",
-    "no_input": "❔ | <b>What do you want to stream?</>",
-    "streaming": "▶️ | <b>Streaming...</>",
-    "queued_at": "#️⃣ | <b>Queued at position {{position}}.</>",
-    "no_call": "❌ | <b>There is no active call.</>",
-    "no_video_found": "❌ | <b>No video found.</>",
-    "ns": "🎵 | Currently streaming <b><a href=\"{{titleUrl}}\">{{title}}</></> by <b><a href=\"{{requesterUrl}}\">{{requester}}</></>...",
-    "error": "❌ | <b>An error occurred.</>",
-    "file_too_big": "❌ | <b>This file is too big.</>",
-    "error_with_message": "❌ | <b>An error occurred:</> {{message}}",
-    "invalid_volume": "❌ | <b>Pass a number between 0 and 200.</>",
-    "volume_set": "🔈 | <b>Volume set to {{amount}}%.</>",
-    "panel_volume_set": "Volume set to {{amount}}%.",
-    "custom_input": "Custom Input",
-    "muted": "🔇 | <b>Muted.</>",
-    "panel_muted": "Muted.",
-    "unmuted": "🔈 | <b>Unmuted.</>",
-    "panel_unmuted": "Unmuted.",
     "already_muted": "❌ | <b>Already muted.</>",
-    "panel_already_muted": "Already muted.",
-    "not_muted": "❌ | <b>Not muted.</>",
-    "panel_not_muted": "Not muted.",
-    "shuffling": "🔀 | <b>Shuffling...</>",
-    "panel_shuffling": "Shuffling...",
+    "assistant_not_in_group": "❌ | <b>My assistant is not here.</>",
+    "authors": ["rojserbest"],
+    "caches_deleted": "🗑 | <b>Caches deleted.</>",
+    "custom_input": "Custom Input",
+    "error": "❌ | <b>An error occurred.</>",
+    "error_with_message": "❌ | <b>An error occurred:</> {{message}}",
+    "file_too_big": "❌ | <b>This file is too big.</>",
+    "invalid_volume": "❌ | <b>Pass a number between 0 and 200.</>",
+    "loop_off": "🔁 | <b>Turned loop off.</>",
+    "loop_on": "🔁 | <b>Turned loop on.</>",
+    "muted": "🔇 | <b>Muted.</>",
+    "no_call": "❌ | <b>There is no active call.</>",
     "no_enough_items": "❌ | <b>No enough items to shuffle.</>",
-    "panel_no_enough_items": "No enough items to shuffle.",
-    "panel": "{{nowEmoji}} | <b><a href=\"{{nowUrl}}\">{{now}}</></>\n➡️ | <b><a href=\"{{nextUrl}}\">{{next}}</></>",
-    "nothing_now": "Nothing streaming now",
-    "nothing_next": "Nothing streaming next",
-    "panel_updated": "Updated.",
+    "no_input": "❔ | <b>What do you want to stream?</>",
     "no_query": "❔ | <b>What do you want to search for?</>",
     "no_results_found": "❌ | <b>No results found.</>",
+    "no_video_found": "❌ | <b>No video found.</>",
+    "not_in_call": "❌ | <b>Not in call.</>",
+    "not_muted": "❌ | <b>Not muted.</>",
+    "not_paused": "❌ | <b>Not paused.</>",
+    "not_streaming": "❌ | <b>Not streaming.</>",
+    "nothing_next": "Nothing streaming next",
+    "nothing_now": "Nothing streaming now",
+    "ns": "🎵 | Currently streaming <b><a href=\"{{titleUrl}}\">{{title}}</></> by <b><a href=\"{{requesterUrl}}\">{{requester}}</></>...",
+    "panel": "{{nowEmoji}} | <b><a href=\"{{nowUrl}}\">{{now}}</></>\n➡️ | <b><a href=\"{{nextUrl}}\">{{next}}</></>",
+    "panel_already_muted": "Already muted.",
+    "panel_muted": "Muted.",
+    "panel_no_enough_items": "No enough items to shuffle.",
+    "panel_not_in_call": "Not in call.",
+    "panel_not_muted": "Not muted.",
+    "panel_not_paused": "Not paused.",
+    "panel_not_streaming": "Not streaming.",
+    "panel_paused": "Paused.",
+    "panel_resumed": "Resumed.",
+    "panel_shuffling": "Shuffling...",
+    "panel_skipped": "Skipped.",
+    "panel_stopped": "Stopped.",
+    "panel_unmuted": "Unmuted.",
+    "panel_updated": "Updated.",
+    "panel_volume_set": "Volume set to {{amount}}%.",
+    "paused": "⏸ | <b>Paused.</>",
+    "queued_at": "#️⃣ | <b>Queued at position {{position}}.</>",
+    "queuing": "🎶 | <b>Queuing {{X}} items...</>",
+    "resumed": "▶️ | <b>Resumed.</>",
     "search_active": "❌ | <b>There is an active search.</>",
-    "search_not_active": "❌ | <b>There is no search active.</>",
-    "search_header": "<b>🔍 | Search results for {{query}}...</>",
-    "search_footer": "<i>Reply the number of the result you want to stream or /cancel.</>",
-    "search_result": "{{numberEmoji}} <b><a href=\"{{url}}\">{{title}}</></>\n  ├ {{durationEmoji}} {{duration}}\n  ├ 👁 {{views}}\n  ├ 📅 {{uploadTime}}\n  └ 👤 {{uploader}}",
     "search_canceled": "✅ | <b>Search canceled.</>",
-    "loop_on": "🔁 | <b>Turned loop on.</>",
-    "loop_off": "🔁 | <b>Turned loop off.</>",
-    "caches_deleted": "🗑 | <b>Caches deleted.</>",
-    "assistant_not_in_group": "❌ | <b>My assistant is not here.</>"
+    "search_footer": "<i>Reply the number of the result you want to stream or /cancel.</>",
+    "search_header": "<b>🔍 | Search results for {{query}}...</>",
+    "search_not_active": "❌ | <b>There is no search active.</>",
+    "search_result": "{{numberEmoji}} <b><a href=\"{{url}}\">{{title}}</></>\n  ├ {{durationEmoji}} {{duration}}\n  ├ 👁 {{views}}\n  ├ 📅 {{uploadTime}}\n  └ 👤 {{uploader}}",
+    "shuffling": "🔀 | <b>Shuffling...</>",
+    "skipped": "⏩ | <b>Skipped.</>",
+    "stopped": "⏹ | <b>Stopped.</>",
+    "streaming": "▶️ | <b>Streaming...</>",
+    "streaming_queuing": "🎶 | <b>Streaming and queuing {{X}} items...</>",
+    "unmuted": "🔈 | <b>Unmuted.</>",
+    "volume_set": "🔈 | <b>Volume set to {{amount}}%.</>"
 }
